[metadata]
name = j2gen
summary = Jinja2 template renderer with yaml input files
description-file =
    README.rst
author = Thomas Bechtold
author-email = tbechtold@suse.com
home-page = https://github.com/toabctl/j2gen
classifier =
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    j2gen = j2gen:main

[files]
packages =
    j2gen

[wheel]
universal = 1
